--- a/journey/package.json
+++ b/journey/package.json
@@ -9,8 +9,12 @@
     "bootstrap": "^4.6.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-hook-form": "^6.15.2",
+    "react-player": "^2.9.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.2",
+    "react-share": "^4.3.1",
+    "react-sharingbuttons": "^1.0.0",
     "reactstrap": "^8.9.0",
     "web-vitals": "^1.1.0"
   },
